# leptos-bevy-combo

./: Cargo.toml
simulation/: Cargo.toml
simulation/src/: main.rs  simulation_clock.rs
web/app/: Cargo.toml
web/app/src/: error_template.rs  lib.rs
web/frontend/: Cargo.toml
web/frontend/src/: lib.rs
web/server/: Cargo.toml
web/server/src/: fileserv.rs  lib.rs  main.rs
