[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.10.1"
bevy_utils = "0.10.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
web-server = { path = "../web/server" }
